<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LoginActivity"
    android:background="@color/bg_color">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo_cookmaster_written"
    android:layout_gravity="center">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/text_color"
            android:textSize="25sp"/>

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/logo_cookmaster_medium">

        </ImageView>-->

    </LinearLayout>

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_input"
        android:hint="@string/email_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>


    <TextView
        android:id="@+id/password_label"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/text_color"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/password_input"
        android:hint="@string/password_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/brand_second_color"
        android:textColor="@color/text_color"
        android:padding="8dp"
        android:text="@string/connect"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotten_password"
            android:padding="8dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:textColor="@color/brand_error_color"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/create_account"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:padding="8dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:textColor="@color/brand_error_color"
            android:textSize="14sp"/>

</LinearLayout>