<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FidelityGameActivity"
    android:background="@color/bg_color">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/brand_primary_color"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/toque_logo_medium_white">
        </ImageView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:id="@+id/settings_button"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/brand_primary_color" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/settings_icon_white"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fidelity_game_layout"
        android:orientation="vertical"
        android:layout_margin="32dp">

        <nl.dionsegijn.konfetti.xml.KonfettiView
            android:id="@+id/konfettiView"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fidelity_game_title"
            android:gravity="center"
            android:textColor="@color/brand_primary_color"
            android:textSize="24dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fidelity_game_description"
            android:gravity="center"
            android:textColor="@color/brand_primary_color"
            android:textSize="16dp">
        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/fidelity_game_question"
            android:gravity="center">
        </TextView>

        <EditText
            android:id="@+id/fidelity_game_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fidelity_game_hint"
            android:inputType="text"
            android:gravity="center">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="right"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/brand_primary_color"
            android:textColor="@color/bg_color"
            android:id="@+id/fidelity_game_button">
            </Button>
    </LinearLayout>
</LinearLayout>