<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FidelityOverviewActivity"
    android:background="@color/bg_color">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/brand_primary_color"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/toque_logo_medium_white">
        </ImageView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:id="@+id/settings_button"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/brand_primary_color" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/settings_icon_white"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="32dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards_stages_title"
            android:gravity="center"
            android:textColor="@color/brand_primary_color"
            android:textSize="24dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards_stage50"
            android:layout_marginTop="30dp"
            android:textColor="@color/brand_primary_color"
            android:textSize="20dp">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/rewards50_recycler_view">
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards_stage110"
            android:layout_marginTop="30dp"
            android:textColor="@color/brand_primary_color"
            android:textSize="20dp">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/rewards110_recycler_view">
        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards_stage180"
            android:layout_marginTop="30dp"
            android:textColor="@color/brand_primary_color"
            android:textSize="20dp">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/rewards180_recycler_view">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>