<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FidelityOverviewActivity"
    android:background="@color/bg_color">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/brand_primary_color"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/toque_logo_medium_white">
        </ImageView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button android:id="@+id/settings_button"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/brand_primary_color" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/settings_icon_white"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fidelity_title"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textColor="@color/brand_primary_color"
            android:textSize="24dp">
        </TextView>
        <!--        android:text="@string/fidelity_points"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You have 15 pts"
            android:id="@+id/user_fidelity_points"
            android:layout_marginTop="30dp"
            android:textColor="@color/text_color"
            android:textSize="20dp">
        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:text="@string/fidelity_stages"
            android:layout_marginTop="60dp"
            android:textSize="18dp"
            android:textColor="@color/text_color"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:text="You have unlocked the following stages :"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            android:id="@+id/needed_points"
            android:textColor="@color/text_color"
            android:layout_height="wrap_content">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/stage_50"
                android:src="@drawable/number_50_icon"
                android:layout_weight="1">
            </ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/stage_110"
                android:src="@drawable/number_50_icon"
                android:layout_weight="1">
            </ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/stage_180"
                android:src="@drawable/number_50_icon"
                android:layout_weight="1">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/brand_primary_color"
                android:textColor="@color/bg_color"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:text="@string/rewards_stages"
                android:id="@+id/stages_btn">
            </Button>
            <ImageButton
                android:backgroundTint="@color/bg_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/about_fidelity_btn"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/info_icon">
            </ImageButton>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>